--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "@hono/node-server": "^1.14.0",
     "@types/jsonwebtoken": "^9.0.9",
+    "dotenv": "^16.4.7",
     "gadolinium": "file:",
     "GADOLINIUM": "file:",
     "hono": "^4.7.5",
