--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   },
   "dependencies": {
     "@hono/node-server": "^1.14.0",
+    "@prisma/client": "^6.5.0",
     "@types/jsonwebtoken": "^9.0.9",
     "dotenv": "^16.4.7",
     "gadolinium": "file:",
@@ -15,6 +16,7 @@
   },
   "devDependencies": {
     "@types/node": "^20.11.17",
+    "prisma": "^6.5.0",
     "tsx": "^4.7.1"
   }
 }
